# metron-bro-plugin-kafka

./: CMakeLists.txt  README  configure  configure.plugin
cmake/: FindOpenSSL.cmake
scripts/: __load__.zeek  init.zeek
scripts/metron/metron-bro-plugin-kafka/: __load__.zeek  logs-to-kafka.zeek
src/: KafkaWriter.cc  Plugin.cc  Plugin.h
tests/: btest.cfg
tests/kafka/: resolved-topic-override-and-config.zeek  resolved-topic-override-only.zeek  show-plugin.zeek
tests/metron-bro-plugin-kafka/: show-plugin.zeek
